Show usernames in edit history, add BriefUser, fix modal z-index, etc.

--- a/client/app/debiki-play.styl
+++ b/client/app/debiki-play.styl
@@ -326,6 +326,13 @@ html:not(.mouse) .dw-rr
   font-size: 13px;
   font-weight: bold
 
+.dw-p-show-hist
+  cursor: pointer;
+  font-weight: bold;
+  color: hsl(0, 0%, 26%);
+  &:hover
+    text-decoration: underline;
+
 // Users with no links to more info
 span.dw-p-by,
 span.dw-p-e-by
